--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -1,6 +1,12 @@
 apply plugin: 'com.android.application'
 //apply plugin: 'com.android.library'
 apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
+// Apply the Performance Monitoring plugin
+//apply plugin: 'com.google.firebase.firebase-perf'
+
+//    // Apply the Crashlytics Gradle plugin
+//    apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 29
@@ -32,10 +38,7 @@ dependencies {
 //    implementation 'com.google.firebase:firebase-messaging'
 //    implementation platform('com.google.firebase:firebase-bom:26.8.0')
 //    implementation 'com.google.firebase:firebase-analytics'
-    apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
 
-    // Apply the Crashlytics Gradle plugin
-//    apply plugin: 'com.google.firebase.crashlytics'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -50,4 +53,21 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     //reload
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
+
+        // Import the BoM for the Firebase platform
+//    implementation platform('com.google.firebase:firebase-bom:28.0.1')
+
+    // Declare the dependency for the Performance Monitoring library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+//    implementation 'com.google.firebase:firebase-perf'
+
+
+//    // Import the BoM for the Firebase platform
+//    implementation platform('com.google.firebase:firebase-bom:28.0.1')
+//
+//    // Declare the dependencies for the Crashlytics and Analytics libraries
+//    // When using the BoM, you don't specify versions in Firebase library dependencies
+//    implementation 'com.google.firebase:firebase-crashlytics'
+//    implementation 'com.google.firebase:firebase-analytics'
 }
