--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
-
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
 
     <application
         android:name="androidx.multidex.MultiDexApplication"
@@ -195,7 +195,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </service>
-
+        <receiver android:name=".receiever.LightSensorReceiver"
+            tools:ignore="Instantiatable" />
         <service android:name=".receiever.ActivityRecognitionReceiver"/>
         <service android:name=".receiever.AppUsageReceiver" />
         <service android:name=".receiever.MyBackgroudService"/>
