--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -25,6 +25,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 
 }
 
@@ -53,9 +57,12 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     //reload
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'com.opencsv:opencsv:5.3'
+    implementation 'androidx.room:room-runtime:2.3.0'
+    annotationProcessor 'androidx.room:room-compiler:2.3.0'
 
 
-        // Import the BoM for the Firebase platform
+    // Import the BoM for the Firebase platform
 //    implementation platform('com.google.firebase:firebase-bom:28.0.1')
 
     // Declare the dependency for the Performance Monitoring library
