--- a/surveyandroid/build.gradle
+++ b/surveyandroid/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.firebase:firebase-firestore:21.4.3'
+    implementation 'com.opencsv:opencsv:5.3'
+
 //    apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
