--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,11 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'http://www.idescout.com/maven/repo/'
+            name 'IDEScout, Inc.'
+        }
+
     }
 }
 
