--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -12,7 +12,7 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.recoveryrecord.surveyandroid"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -60,7 +60,8 @@ dependencies {
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
     releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
-
+    //firestore auth
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     //graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
 
