--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -12,10 +12,10 @@ android {
     compileSdkVersion 29
     defaultConfig {
         applicationId "com.recoveryrecord.surveyandroid"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "2.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         multiDexEnabled true
     }
@@ -57,6 +57,7 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation 'com.opencsv:opencsv:5.3'
     implementation 'androidx.room:room-runtime:2.3.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
     releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
@@ -64,5 +65,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     //graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+    //update
+    implementation 'com.google.android.play:core:1.7.3'
 
 }
