--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 //apply plugin: 'com.android.library'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 //apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
 // Apply the Performance Monitoring plugin
 //apply plugin: 'com.google.firebase.firebase-perf'
@@ -58,6 +59,8 @@ dependencies {
     implementation 'com.opencsv:opencsv:5.3'
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'com.google.firebase:firebase-storage:20.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.8'
+    implementation 'com.google.firebase:firebase-analytics:20.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
     debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
     releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
