--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -1,20 +1,31 @@
-apply plugin: 'com.android.application'
-//apply plugin: 'com.android.library'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
-//apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
-// Apply the Performance Monitoring plugin
-//apply plugin: 'com.google.firebase.firebase-perf'
+//apply plugin: 'com.android.application'
+//apply plugin: 'com.google.gms.google-services'
+//apply plugin: 'com.google.firebase.crashlytics'
+//apply plugin: 'kotlin-android' // For Android projects
+//apply plugin: 'kotlin-jvm'    // For non-Android projects
 
-//    // Apply the Crashlytics Gradle plugin
-//    apply plugin: 'com.google.firebase.crashlytics'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+//    id 'com.google.dagger.hilt.android'
+    id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-parcelize'
+    id 'org.jetbrains.kotlin.android'
+    id 'org.jetbrains.kotlin.kapt'
+    id 'org.jetbrains.kotlin.plugin.parcelize'
+    id 'org.jetbrains.kotlin.plugin.serialization'
+    // firebase
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     defaultConfig {
         applicationId "com.recoveryrecord.surveyandroid"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 2
         versionName "2.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -29,6 +40,17 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
     }
     lintOptions {
         checkReleaseBuilds false
@@ -62,13 +84,21 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics:18.2.8'
     implementation 'com.google.firebase:firebase-analytics:20.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.3.0'
-    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
-    releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
+//    debugImplementation 'com.idescout.sql:sqlscout-server:4.1'
+//    releaseImplementation 'com.idescout.sql:sqlscout-server-noop:4.1'
     //firestore auth
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     //graph
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
     //update
     implementation 'com.google.android.play:core:1.7.3'
+    // kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    // Coroutine
+    def coroutine_version = "1.6.4"
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version")
+    // Hilt
+//    implementation "com.google.dagger:hilt-android:$hilt_version"
+//    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
 }
