--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -94,5 +94,7 @@ dependencies {
     // Hilt
 //    implementation "com.google.dagger:hilt-android:$hilt_version"
 //    kapt "com.google.dagger:hilt-compiler:$hilt_version"
-
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 }
