--- a/app_i/build.gradle
+++ b/app_i/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-//    id 'com.google.dagger.hilt.android'
+    id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'org.jetbrains.kotlin.android'
@@ -92,9 +92,17 @@ dependencies {
     def coroutine_version = "1.6.4"
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version")
     // Hilt
-//    implementation "com.google.dagger:hilt-android:$hilt_version"
-//    kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+//    // viewmodel scope
+//    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2"
+//    // activity viewmodel
+//    // Kotlin
+//    implementation "androidx.fragment:fragment-ktx:$fragment_version"
+
+//    classpath 'com.android.tools.build:gradle:3.6.3'
+//    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
 }
