--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = "1.7.20"
         hilt_version = '2.44'
         nav_version = "2.4.1"
+        fragment_version = '1.5.7'
         kotlinSerializationJsonVersion = '1.3.2'
         composeBomVersion = '2022.10.00'
     }
@@ -24,7 +25,7 @@ buildscript {
 
 //        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-//        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
