--- a/app_i/src/main/AndroidManifest.xml
+++ b/app_i/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
     <application
-        android:name=".BaseApplication"
+        android:name=".di.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/muilab_logo"
         android:label="@string/app_name"
@@ -172,7 +172,7 @@
             </intent-filter>
         </receiver>
         <receiver
-            android:name=".ShutDownReceiver"
+            android:name=".receiever.ShutDownReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
